<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">资产盘点</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tv_name">用户</string>
    <string name="tv_pwd">密码</string>
    <string name="tv_check">记住我</string>
    <string name="tv_liogin">登陆</string>
    <string name="tv_removePwd">找回密码</string>
    <string name="czmm">重置密码</string>
    <string name="retrieveRequest">密码提示问题：</string>
    <string name="retrievedaan">密码提示答案：</string>
    <string name="next">下一步</string>
    <string name="newpwd">输入新密码：</string>
    <string name="newpwdtwo">确定新密码：</string>
    <string name="queding">确定</string>
    <string name="tv_configuration">服务配置</string>
    <string name="tv_title">超群资产盘点管理系统</string>
    <string name="zcpdgl">固定资产盘点管理</string>
    <string name="zcnumber">资产编号</string>
    <string name="zcname">资产名称</string>
    <string name="zctype">资产类型</string>
    <string name="zcidepartment">机构网点</string>
    <string name="zcddate">使用日期</string>
    <string name="zcfvalue">资产原值</string>
    <string name="zcmaker">服务厂家</string>
    <string name="zcontact">联系人员</string>
    <string name="zctelphone">联系电话</string>
    <string name="tv_configuration_name">服务地址:</string>
    <string name="pdrw">盘点任务</string>
    <string name="zccx">资产查询</string>
    <string name="wdcz">我的设置</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
   <string name="zaiyong">在用</string>
   <string name="xianzhi">闲置</string>
</resources>