<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#47a0da" >

        <TextView
            android:id="@+id/tv_un"
            style="@style/tab_top_stype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/czmm" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:clickable="true"
             android:onClick="onBack"
            android:src="@drawable/back" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" >

        <TextView
            android:id="@+id/TextView01"
            style="@style/word_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/et_upwd"
            android:text="@string/newpwd" />

        <EditText
            android:id="@+id/et_upwd"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_uname"
            android:background="@drawable/edtshape"
            android:ems="10"
            android:hint="@null"
            android:inputType="text"
            android:maxLines="2"
            android:paddingLeft="10dp" />

        <TextView
            android:id="@+id/tv_uname"
            style="@style/word_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="输入原密码" />

        <Button
            android:id="@+id/btn_sure"
            style="@style/btntitle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/et_ruku"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape"
            android:text="@string/queding" />

        <TextView
            android:id="@+id/tv_uid"
            style="@style/word_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/et_twopwd"
            android:text="@string/newpwdtwo" />

        <EditText
            android:id="@+id/et_twopwd"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/TextView01"
            android:background="@drawable/edtshape"
            android:ems="10"
            android:hint="@null"
            android:inputType="text"
            android:maxLines="2"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/et_ruku"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_uid"
            android:background="@drawable/edtshape"
            android:ems="10"
            android:hint="@null"
            android:inputType="text"
            android:maxLines="2"
            android:paddingLeft="10dp" />
    </RelativeLayout>

</LinearLayout>